--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,8 @@ on:
       version: 
         type: text
         description: 'Version number Eg: 4.2.0' 
-
+permissions:
+  contents: write
 jobs:
 
   build-darwin:
@@ -55,3 +56,4 @@ jobs:
           tag: v${{github.event.inputs.version}}
           name: Neutralinojs v${{github.event.inputs.version}} released!
           artifacts: './bin/neutralinojs-v${{github.event.inputs.version}}.zip'
+          owner: 3Shain
